--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-//* Geral */
-*{
+{
     box-sizing: border-box;
     margin:0;
 }
@@ -61,10 +60,14 @@ a{
     width: 45%;
     font-size: 16px;
     text-align: left;
+    padding-bottom: 10px;
+    line-height: 30px;
 }
 .sobre-mim__habilidades{
-    border: 1px solid green; 
+    border: 1px solid green;
+    margin-left: 20px; 
 }
+
 .sobre-mim__titulo{
     font-size: 40px;
     text-align: left;
@@ -83,4 +86,5 @@ a{
 
 .btn-roxo{
     border: 1px solid purple;
+    margin-bottom: 20px;
 }
